k8s/admin.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  labels:
    app: admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-service
  template:
    metadata:
      labels:
        app: admin-service
    spec:
      containers:
      - name: admin-service
        image: admin-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3005
          name: http
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3005
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3005
          initialDelaySeconds: 10
          periodSeconds: 15
