k8s/admin.service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  labels:
    app: admin-service
spec:
  type: ClusterIP
  selector:
    app: admin-service
  ports:
  - port: 80
    targetPort: 3005
    name: http
