k8s/consumer.service.yml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
  labels:
    app: consumer
spec:
  selector:
    app: consumer
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3003
