k8s/manufacturer-db.service.yml
apiVersion: v1
kind: Service
metadata:
  name: manufacturer-db-service
  labels:
    app: manufacturer-db
spec:
  selector:
    app: manufacturer-db
  type: ClusterIP
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
