k8s/manufacturer.service.yml
apiVersion: v1
kind: Service
metadata:
  name: manufacturer-service
  labels:
    app: manufacturer
spec:
  selector:
    app: manufacturer
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3001
