k8s/pharma-core.service.yml
apiVersion: v1
kind: Service
metadata:
  name: pharma-core-service
  labels:
    app: pharma-core
spec:
  selector:
    app: pharma-core
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4000
