k8s/shopkeeper-db.service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopkeeper-db-service
  labels:
    app: shopkeeper-db
spec:
  selector:
    app: shopkeeper-db
  type: ClusterIP
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
