k8s/shopkeeper.service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopkeeper-service
  labels:
    app: shopkeeper
spec:
  selector:
    app: shopkeeper
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3002
